fixes body overscrolling on x on mobile

--- a/static-build/components/Footer/styles.css
+++ b/static-build/components/Footer/styles.css
@@ -2,7 +2,11 @@
 
 .footer {
   background: var(--backpack-blue);
-  padding: var(--spacing-6);
+  padding: var(--spacing-5) var(--spacing-3) var(--spacing-3);
+
+  @media (min-width: 700px) {
+    padding: var(--spacing-6);
+  }
 
   & a {
     color: var(--ice-blue);
@@ -14,6 +18,12 @@
 
   & h2 {
     color: var(--light-blue);
+    margin-bottom: var(--spacing-3);
+
+    @media (max-width: 700px) {
+      font-size: var(--font-size--h2);
+      margin-left: 0;
+    }
 
     & > span {
       color: var(--ice-blue);
@@ -40,7 +50,7 @@
   font-size: var(--font-size--detail);
   line-height: var(--font-lineheight--extended);
   color: var(--ice-blue);
-  padding-bottom: var(--spacing-6);
+  padding-bottom: var(--spacing-3);
 }
 
 .plant {
